samples/_failures_safe/1761366778_8964fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_963e3e94.c: In function ‘tokenize’:
./samples/SAFE/__tmp_963e3e94.c:147:9: error: expected declaration or statement at end of input
  147 |         }
      |         ^
./samples/SAFE/__tmp_963e3e94.c:147:9: error: expected declaration or statement at end of input
